# archive-creator-microservices

./: Cargo.toml  README.md  build.rs  config.toml
common/: Cargo.toml
common/src/: lib.rs
proto/: task_service.proto
rest_api/: Cargo.toml  build.rs
rest_api/src/: error.rs  main.rs
rest_api/src/api/: enqueue.rs  get_archive.rs  get_progress.rs  mod.rs  stop_task.rs
task_service/: Cargo.toml  build.rs
task_service/src/: api.rs  main.rs
task_service/src/models/: task.rs
task_service/src/services/: task_service.rs
task_service/src/utils/: zip.rs
