[package]
name = "rest_api"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-multipart = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6"
tonic = "0.4"
prost = "0.8"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "rest_api"
path = "src/main.rs"