[package]
name = "rest_api"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-multipart = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.7"
tonic = "0.12"
prost = "0.13"
config = "0.14"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "rest_api"
path = "src/main.rs"
