[package]
name = "rest_api"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-multipart = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
uuid = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.7"
tonic = "0.12"
prost = "0.13"
config = "0.14"
utoipa = { version = "5.0.0-alpha.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["actix-web"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "rest_api"
path = "src/main.rs"
