[package]
name = "task_service"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.4"
prost = "0.8"
uuid = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rand = "0.8"
zip = "0.5"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "task_service"
path = "src/main.rs"